Add favorite and comments icons in post item

--- a/src/components/HomeContentItem.css
+++ b/src/components/HomeContentItem.css
@@ -6,6 +6,10 @@
     margin-right: 300px;
 }
 
+img {
+    cursor: pointer;
+}
+
 .container_writter {
     display: flex;
     align-items: center;
