--- a/src/components/HomeContentItem.css
+++ b/src/components/HomeContentItem.css
@@ -1,9 +1,16 @@
+.container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
 .container_item {
-    width: 100%;
+    width: 60%;
     display: flex;
     flex-direction: column;
-    margin-left: 300px;
-    margin-right: 300px;
+    justify-content: center;
+    align-items: center;
 }
 
 img {
@@ -24,27 +31,28 @@ img {
 
 .post_img {
     border-radius: 10px;
-    width: 500px;
-    margin-left: 40px;
+    width: 450px;
+    margin-left: 15%;
     margin-top: 20px;
-    height: 700px;
+    height: 650px;
 }
 
 p {
-    max-width: 50%;
+    max-width: 100%;
     text-align: justify;
 }
 
 hr {
-    width: 50%;
+    width: 100%;
 }
 
 @media (max-width: 620px) {
     .container_item {
+        width: 100%;
         margin-left: 0;
     }
     .post_img {
-        margin-left: 0
+        margin-left: 0;
     }
     p {
         max-width: 100%;
